sizes is relative to block-size now

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -11,23 +11,22 @@
 <body>
     <div id="makeDark">
         <div id="SignUpWindow">
-            Your account
-            <textarea placeholder="Your Login" name="myAnswer" class="textSignUp"></textarea>
-            <textarea placeholder="Your password" name="myAnswer" class="textSignUp"></textarea>
-            <br>
-            <a href="#" class="close">Log in</a>
+            <div style="margin-bottom: 1%; margin-top: 1%">Your account</div>
+            <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Login"><br>
+            <input style="margin-top: 5%; font-size: 14pt" type="password" placeholder="Password">
+            <a href="#" type="button" class="close">Sign up</a>
         </div>
     </div>
 
     <div class="header">
-        <a class="header_color link" href="#">IU9-Forum</a>
-        <a class="header_color link2" href="#makeDark">Sign Up</a>
+        <a style="float: left; margin: 1% 0 0 2%" class="header_color link" href="#">IU9-Forum</a>
+        <a style="float: right; margin: 1% 2% 0 0" class="header_color link2" href="#makeDark">Sign Up</a>
     </div>
 
     <div class="container">
         <div class="themes">
             <h2 style="border-bottom-style:solid">Categories</h2>
-            <ul style="list-style-type:none; max-height: 77vh">
+            <ul style="list-style-type:none; max-height: 90%">
                 <li class="theme link"> SPORT</li>
                 <li class="theme link"> MUSIC </li>
                 <li class="theme link"> FILMS </li>
@@ -59,15 +58,24 @@
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
 <!--                d d d d d d d d d  d d d d d d d d d d d-->
                 vownovnwjjvnewnjewnvjenwjof selected theme</div>
-            <ul style="margin-top: 15vh; max-height: 60vh">
+            <ul style="max-height: 67%;">
                 <li class="answer">
                     <div class="avatar">
                         <div class="nickname link" href="#">Nickname</div>
                     </div>
-                    <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v
-                        e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv
-                        wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa
-                        cascsacsacsacsa cacscsaacacsjnvnjvvveefsjnhesbwvevsvwn</div>
+                    <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
+
+                        d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                        d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                        d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                        d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                        d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                        d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                        d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                        e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsv
+                        vfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscaca
+                        cascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa
+                        csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <input type="image" class="vote" src="like.png" alt="#"/>
                     <input type="image" class="vote" src="dislike.png" alt="#"/>
                     <div class="vote_counter">156</div>
