--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--<link rel="stylesheet" type="text/css" href="public/styles/index.css">-->
-
     <link rel="stylesheet" type="text/css" href="new_index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Josefin+Slab&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>IU9-Forum</title>
 </head>
-<body>
+<body class="colorBackground colorText">
     <div id="makeDark">
-        <div id="SignUpWindow">
+        <div id="SignUpWindow" class="colorMain">
             <div style="margin-bottom: 1%; margin-top: 1%">Your account</div>
             <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Login"><br>
             <input style="margin-top: 5%; font-size: 14pt" type="password" placeholder="Password">
-            <a href="#" type="button" class="close">Sign up</a>
+            <a href="#" type="button" class="close colorDarkLink colorBackground">Sign up</a>
         </div>
     </div>
 
-    <div class="header">
-        <a style="float: left; margin: 1% 0 0 2%" class="header_color link" href="#">IU9-Forum</a>
-        <a style="float: right; margin: 1% 2% 0 0" class="header_color link2" href="#makeDark">Sign Up</a>
+    <div class="header colorHeader">
+        <a style="float: left; margin: 1% 0 0 2%" class="colorHeader link colorDarkLink" href="#">IU9-Forum</a>
+        <a style="float: right; margin: 1% 2% 0 0" class="colorHeader link colorDarkLink" href="#makeDark">Sign Up</a>
     </div>
 
     <div class="container">
-        <div class="themes">
-            <h2 style="border-bottom-style:solid">Categories</h2>
+        <div class="themes colorMain">
+            <h2 style="border-bottom-style:solid;">Categories</h2>
             <ul style="list-style-type:none; max-height: 90%">
-                <li class="theme link"> SPORT</li>
-                <li class="theme link"> MUSIC </li>
-                <li class="theme link"> FILMS </li>
-                <li class="theme link"> SERIALS </li>
-                <li class="theme link"> SPORT</li>
-                <li class="theme link"> VIDEOGAMES </li>
-                <li class="theme link"> COOKING </li>
-                <li class="theme link"> IT-TECHNOLOGIES </li>
-                <li class="theme link"> STUDYING </li>
-                <li class="theme link"> VIDEOS </li>
-                <li class="theme link"> YOUTUBE </li>
-                <li class="theme link"> DRIVING </li>
+                <li class="theme link colorSection colorDarkLink"> SPORT</li>
+                <li class="theme link colorSection colorDarkLink"> MUSIC </li>
+                <li class="theme link colorSection colorDarkLink"> FILMS </li>
+                <li class="theme link colorSection colorDarkLink"> SERIALS </li>
+                <li class="theme link colorSection colorDarkLink"> SPORT</li>
+                <li class="theme link colorSection colorDarkLink"> VIDEOGAMES </li>
+                <li class="theme link colorSection colorDarkLink"> COOKING </li>
+                <li class="theme link colorSection colorDarkLink"> IT-TECHNOLOGIES </li>
+                <li class="theme link colorSection colorDarkLink"> STUDYING </li>
+                <li class="theme link colorSection colorDarkLink"> VIDEOS </li>
+                <li class="theme link colorSection colorDarkLink"> YOUTUBE </li>
+                <li class="theme link colorSection colorDarkLink"> DRIVING </li>
             </ul>
         </div>
 
-        <div class="selected_theme">
-            <input class="backButtonColor" type="image" src="back.png" height="60" style="float: left; margin-top: 4.4vh" onclick="history.back();">
+        <div class="selected_theme colorMain">
+            <input class="backButton colorDarkLink" type="image" src="back.png" height="60" style="float: left; margin-top: 4.4vh" onclick="history.back();">
             <div class="themeText">Text nkevbhebhewbhvibewibe ibnvnweovnjnw vjnej  v w v j e n e j v n w e j n
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
@@ -59,9 +57,9 @@
 <!--                d d d d d d d d d  d d d d d d d d d d d-->
                 vownovnwjjvnewnjewnvjenwjof selected theme</div>
             <ul style="max-height: 67%;">
-                <li class="answer">
+                <li class="answer colorSection">
                     <div class="avatar">
-                        <div class="nickname link" href="#">Nickname</div>
+                        <div class="nickname link colorDarkLink" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e
 
@@ -78,29 +76,29 @@
                         csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <input type="image" class="vote" src="like.png" alt="#"/>
                     <input type="image" class="vote" src="dislike.png" alt="#"/>
-                    <div class="vote_counter">156</div>
+                    <div class="vote_counter colorMain">156</div>
                 </li>
-                <li class="answer">
+                <li class="answer colorSection">
                     <div class="avatar">
-                        <div class="nickname link" href="#">Nickname</div>
+                        <div class="nickname link colorDarkLink" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <input type="image" class="vote" src="like.png" alt="#"/>
                     <input type="image" class="vote" src="dislike.png" alt="#"/>
                     <div class="vote_counter">156</div>
                 </li>
-                <li class="answer">
+                <li class="answer colorSection">
                     <div class="avatar">
-                        <div class="nickname link" href="#">Nickname</div>
+                        <div class="nickname link colorDarkLink" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <input type="image" class="vote" src="like.png" alt="#"/>
                     <input type="image" class="vote" src="dislike.png" alt="#"/>
                     <div class="vote_counter">156</div>
                 </li>
-                <li class="answer">
+                <li class="answer colorSection">
                     <div class="avatar">
-                        <div class="nickname link" href="#">Nickname</div>
+                        <div class="nickname link colorDarkLink" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <input type="image" class="vote" src="like.png" alt="#"/>
@@ -112,7 +110,7 @@
             <div class="new_answer">
                 <div class="avatar" style="margin-left: 0.4vw"></div>
                 <textarea placeholder="Type your opinion!" name="myAnswer" class="myAnswer"></textarea>
-                <p><input class="backButtonColor" type="image" src="send.png" height="60"></p>
+                <p><input class="backButton colorDarkLink" type="image" src="send.png" height="60"></p>
             </div>
         </div>
     </div>
